@@ -74,20 +74,28 @@
     // containing the parser's specification file
 #define PARSER_DIR          ""
 
-    // If a parser must be constructed, should the script (provided in the
-    // skeleton file parser/gramspec/grambuild) `parser/gramspec/grambuild'
-    // **NOT** be called? If it must NOT be called, comment out the following 
-    // #define directive:
-#define GRAMBUILD
-
     // What it the program generating a parser?
 #define PARSGEN             "bisonc++"
 
-    // What it the grammar specificication file?
-#define PARSSPEC            "grammar"
-
     // Flags to provide PARSGEN with:
 #define PARSFLAGS           "-V -l"
+
+    // What it the grammar specification file?
+#define PARSSPEC            "grammar"
+
+    // Since bisonc++ 2.0.0 a grammar definition may be split over multiple
+    // files. If multiple grammar definitions are used, specify an acceptable
+    // regular expression that can be used with icmake's `makelist()' function
+    // to determine all grammar definition files (other than or possibly
+    // including the above PARSPEC specification). If applicable, specify this
+    // regular expression (which will be used from within the PARSER_DIR
+    // directory) below and uncomment:
+//#define PARSFILES    ""
+
+    // Since bisonc++ 2.0.0 the GRAMBUILD directive is obsolete.
+    // If GRAMBUILD is still used, uncomment the following directive.
+    // Note that 'PARSEFILES' overrules 'GRAMBUILD'
+/#define GRAMBUILD
 
     // Name of the file generated by the parser generator containing the 
     // parser function
