@@ -8,4 +8,6 @@ namespace Icmbuild
     extern char author[];
 };
 
+void usage(std::string const &progname);
+
 using namespace std;
