@@ -5,7 +5,7 @@
 void usage(std::string  const  &progname)
 {
     cout << "\n" <<
-    progname << " by " << Icmbuild::author <<
+    progname << " by " << Icmbuild::author << "\n" <<
     progname << " V" << Icmbuild::version << " " << Icmbuild::year << "\n"
     "\n"
     "Usage: " << progname << " [options] args\n"
